@@ -12,6 +12,8 @@ import de.digitalcollections.model.paging.SearchPageResponse;
 import de.digitalcollections.model.text.LocalizedText;
 import java.net.URL;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -311,7 +313,8 @@ public class UrlAliasRepositoryImpl extends JdbiRepositoryImpl implements UrlAli
 
   @Override
   protected List<String> getAllowedOrderByFields() {
-    return List.of("created", "lastPublished", "\"primary\"", "slug", "targetLanguage");
+    return new ArrayList<>(
+        Arrays.asList("created", "lastPublished", "\"primary\"", "slug", "targetLanguage"));
   }
 
   private String getAssignmentsForUpdate() {
@@ -340,6 +343,11 @@ public class UrlAliasRepositoryImpl extends JdbiRepositoryImpl implements UrlAli
     return PROPERTY_COLUMN_MAPPING.keySet().stream()
         .map(prop -> ":" + prop)
         .collect(Collectors.joining(", "));
+  }
+
+  @Override
+  protected String getUniqueField() {
+    return "uuid";
   }
 
   @Override
